# reimbursement-hackathon

./: .env.sample  README.md  pyproject.toml  requirements.txt
data/: employees.csv  expense_policies.csv  expense_policies.txt  vendors.csv
receipts/: Receipt.jfif
records/: claims_log.csv
src/: config.py  main.py
src/agent/: graph.py  nodes.py  state.py
src/api/: server.py
src/rag/: retriever.py
src/services/: email_service.py  ocr_service.py
src/ui/: app.py
src/utils/: data_loader.py  helpers.py
