[project]
name = "reimbursement-hackathon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "pandas-stubs==3.0.0.260204",
    "protobuf>=7.34.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

