[project]
name = "reimbursement-hackathon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "easyocr>=1.7.2",
    "fastapi>=0.135.3",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langfuse>=2.60.10",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "pandas-stubs==3.0.0.260204",
    "protobuf>=7.34.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]

[tool.pyrefly]
search-path = ["."]
project-includes = ["src"]
project-excludes = [".venv"]
pydantic = true

[dependency-groups]
dev = [
    "pyrefly>=0.60.2",
    "ruff>=0.15.10",
]

